--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@
 }
 .navbar span{
     font-size: 30px;
-font-family:sans-serif;}
+font-family:sans-serif
+;}
 .main{
     text-align:center ;
     background-color: rgb(5, 5, 5);
