--- a/style.css
+++ b/style.css
@@ -3,15 +3,31 @@
     margin: 0;
 }
 
-.navbar {
+.navbar{
     background-color: black;
     color: #77f9f3;
+    
 
 }
 
-.navbar span {
-    font-size: 30px;
+.navbar-toggler{
+    background-color: aliceblue;
+    color: aliceblue;
+}
+.navbar-brand {
+    font-size: 50px;
     font-family: 'Oswald', sans-serif;
+    color: #77f9f3;
+}
+.nav-link{
+    font-size: 20px;
+    font-family: 'Oswald', sans-serif;
+    color: #77f9f3;
+ 
+}
+.nav-item{
+    padding-left: 20px;
+    padding-right: 10px;
 }
 
 .main {
@@ -67,30 +83,86 @@
 
 }
 
+
+
 /*download*/
 .download{
     
     background-color:#222324;  
     color: aliceblue;
+    text-align: center;
 }
 
 .subject-img{
     height: 300px;
     width: 300px;
 }
-
-
-.download{
-    text-align: center;
-    
-
+.download a{
+    background-color: #77f9f3;
 }
+
 .download h2{
     margin-top: 10px;
     margin-bottom: 10px;
     color:whitesmoke;
+    font-size: 50px;
+    font-family: 'Oswald', sans-serif;
+
+}
+
+.download h1{
+    padding-top: 10px;
+    margin-bottom: 10px;
+    color:#77f9f3;
+    font-size: 50px;
+    font-family: 'Oswald', sans-serif;
+
+
 }
 .download a{
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+.download img{
+    margin-top: 30px;
+
+}
+
+/*download-sub*/
+.download-sub{
+    background-color:#222324bf;  
+    color: aliceblue;
+    text-align: center; 
+}
+
+
+.subject-img{
+    height: 300px;
+    width: 300px;
+}
+.download-sub a{
+    background-color: #77f9f3;
+}
+
+.download-sub h2{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    color:whitesmoke;
+    font-size: 50px;
+    font-family: 'Oswald', sans-serif;
+
+}
+
+.download-sub h1{
+padding-top: 10px;
+    margin-bottom: 10px;
+    color:#77f9f3;
+    font-size: 50px;
+    font-family: 'Oswald', sans-serif;
+
+
+}
+.download-sub a{
     margin-top: 10px;
     margin-bottom: 20px;
 }
@@ -109,6 +181,13 @@
 
 .footer-content h2{
     font-family: 'Oswald', sans-serif;
-    font-size: 70px;
+    font-size: 50px;
+    padding-top: 40px;
+    padding-bottom: 40px;
 
 }   
+
+.footer-content p {
+    
+    padding-bottom: 20px;
+}
